# iDescriptor

./: .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  DeveloperDiskImages.json  README.md  UDEV.md  default.nix  flake.nix  resources.qrc  resources.win.qrc  shell.nix  sponsors.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  ci.yml
cmake/: win-deploy.cmake
nix/: hm-module.nix  nixos-module.nix  package.nix
resources/: win.dark.qcss  win.light.qcss
resources/icons/app-icon/: icon.icns
scripts/: deploy-appimage.sh  deploy-dmg.sh
src/: afcexplorerwidget.cpp  afcexplorerwidget.h  airplaywidget.cpp  airplaywidget.h  appcontext.cpp  appcontext.h  appdownloadbasedialog.cpp  appdownloadbasedialog.h  appdownloaddialog.cpp  appdownloaddialog.h  appinstalldialog.cpp  appinstalldialog.h  appstoremanager.cpp  appstoremanager.h  appswidget.cpp  appswidget.h  batterywidget.cpp  cableinfowidget.cpp  cableinfowidget.h  devdiskimagehelper.cpp  devdiskimagehelper.h  devdiskimageswidget.cpp  devdiskimageswidget.h  devdiskmanager.cpp  devdiskmanager.h  deviceimagewidget.cpp  deviceimagewidget.h  deviceinfowidget.cpp  deviceinfowidget.h  devicelistener.h  devicemanagerwidget.cpp  devicemanagerwidget.h  devicemenuwidget.cpp  devicemenuwidget.h  devicesidebarwidget.cpp  devicesidebarwidget.h  devicetabwidget.cpp  devicetabwidget.h  diagnosewidget.cpp  diagnosewidget.h  (+97 more)
src/base/: appdownload.cpp  appdownload.h  tool.cpp  tool.h
src/core/helpers/: compare_product_type.cpp  fetch_app_icon_from_apple.cpp
src/core/services/: afc2_client_new.cpp  detect_has_been_jailbroken_before.cpp  detect_jailbroken.cpp  get-device-info.cpp  get_file_tree.cpp  get_mounted_image.cpp  init_device.cpp  mount_dev_image.cpp  restart.cpp  set_location.cpp  shutdown.cpp
src/core/services/dnssd/: dnssd_service.cpp  dnssd_service.h
src/lib/: ipatool-go
src/platform/windows/: blur_imp.cpp  check_deps.cpp  check_deps.h  setuptitlebar.cpp  win_common.h
src/platform/windows/widgets/: wintoolwidget.cpp  wintoolwidget.h
src/rust/: Cargo.toml  build.rs
src/rust/include/: idecriptor_rust.h
src/rust/src/: afc.rs  afc2_services.rs  afc_services.rs  hause_arrest.rs  io_manager.rs  lib.rs  screenshot.rs  service_manager.rs  utils.rs
